<resources>
    <string name="app_name">Take Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">All Notes</string>
    <string name="mantis">Mantis</string>
    <string name="sample_note">When you speak a language, you need to follow grammar rules
        and use commonly known vocabulary, otherwise nobody would under-
stand you. Similar idea applies to code. Each programming language has its
        syntax and if you violate that syntax, the compiler cannot
understand your code. Each language also comes with certain conventions
        (these do not matter to the compiler, but matter greatly to
humans reading the code). Following certain conventions when writing code
        makes it easier to read and to debug. For the benefit of
your code readers and your own, you should follow the coding conventions
        outlined in this document.</string>

    <string name="sample_time">6:20pm</string>
    <string name="home_fragment">Home</string>
    <string name="add_note_fragment">Add Note Fragment</string>
    <string name="note_title">Title</string>
    <string name="sample_title">Sample Title</string>
    <string name="text_empty_message">
        <![CDATA[No notes added. Tap the <font color=\'#797979\'>+</font>
        button to create a note.]]>
    </string>
    <string name="my_email">odhiambomichaelallan@gmail.com</string>
    <string name="all_notes">All Notes</string>
    <string name="home">Home</string>
    <string name="frequently_used_fragment">Frequently Used</string>
    <string name="frequent">Frequent</string>
    <string name="no_notes">No notes</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="archive">Archive</string>

    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="simple_list">Simple List</string>

    <string name="sort_by">Sort By</string>
    <string name="title">Title</string>
    <string name="date_created">Date Created</string>
    <string name="date_modified">Date Modified</string>
    <string name="order">Order</string>

    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="share">Share</string>

    <string name="take_notes">Take Notes</string>
    <string name="unarchive">Unarchive</string>
    <string name="empty">Empty</string>
    <string name="trash_fragment_alert">Items in the trash will be permanently
        deleted after 15 days</string>
    <string name="trash_content_bottom_banner">This content will be deleted in
        { %s }</string>

    <string name="all">All</string>
    <string name="select_notes">Select Notes</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_closed">Closed</string>

    <string name="search">Search</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="no_recent_searches">No Recent Searches</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="no_search_results_found">No Results Found</string>
    <string name="note_count">%d Notes</string>
    <string name="single_note_count">%d Note</string>
    <string name="note">Note</string>

    <string name="restore">Restore</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="yes">Yes</string>
    <string name="permanently_delete_single_note">Permanently delete %d note</string>
    <string name="permanently_delete_multiple_notes">Permanently delete %d notes</string>

    <string name="first_feedback_text">We are constantly improving our product by listening to
        your feedback. Answer few simple questions, highlight the area of concern and send it to us.</string>
    <string name="welcome">Welcome!</string>

    <string name="get_started">Get Started</string>
    <string name="describe_issue">Could you describe your issue or suggestion?</string>
    <string name="sensitive_content_disclaimer">Please do not include sensitive information</string>
    <string name="tell_us_how_we_can_improve">Tell us how we can improve our product..</string>

    <string name="feedback_second_step_message">Great! Let us get started..</string>
    <string name="email_subject">Feedback on Take Notes App</string>
    <string name="thanks_for_your_feedback">Thank you for your feedback</string>

    <string name="archive_single_note">Archive %d note</string>
    <string name="archive_multiple_notes">Archive %d notes</string>
    <string name="unarchive_single_note">Unarchive %d note</string>
    <string name="unarchive_multiple_notes">Unarchive %d notes</string>

    <string name="delete_single_note">Move %d note to trash</string>
    <string name="delete_multiple_notes">Move %d notes to trash</string>
    <string name="last_edited">Edited: %s</string>
</resources>