<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ModalBottomSheetDialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/cancel_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/cancel_icon"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:padding="16dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/onPrimary">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:text="@string/first_feedback_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:insetLeft="30dp"
            android:insetRight="30dp"
            android:text="@string/get_started"
            android:layout_gravity="center"
            android:textSize="15dp"
            app:cornerRadius="10dp"
            style="@style/Widget.Material3.Button.IconButton.Filled"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/describe_issue_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe_issue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sensitive_content_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitive_content_disclaimer"
            android:layout_marginStart="20dp"
            app:drawableRightCompat="@drawable/help_icon" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:dividerColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issue_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/tell_us_how_we_can_improve"
            android:background="@android:color/transparent"
            android:paddingTop="16dp"
            android:textSize="15dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/send_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/send_icon"
            android:layout_gravity="end"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/issue_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            tools:text="@string/sample_note"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>